<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Task9-G19</groupId>
  <artifactId>Task9-G19</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  	<dependencies>
    		<dependency>
  			<groupId>org.jsoup</groupId>
  			<artifactId>jsoup</artifactId>
  			<version>1.16.1</version>
  		</dependency>

	</dependencies>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>Main</mainClass>
                </manifest>
              </archive>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <descriptor>assembly.xml</descriptor>
                  <archive>
                    <manifest>
                      <mainClass>Main</mainClass>
                    </manifest>
                  </archive>
            </configuration>
        </plugin>
    </plugins>
  </build>
</project>